--- a/FinalProject.ipynb
+++ b/FinalProject.ipynb
@@ -55,7 +55,7 @@
    "metadata": {},
    "source": [
     "### Solution for Non-Linear Functions\n",
-    "We achieve the solution by firt writing our function at every single\n",
+    "We achieve the solution by first writing our function at every single\n",
     "one of our measured sample points. If we have M samples, then we simply our equations for different values of x.\n",
     "<br> Here we also include these residual terms to accomodate the fact that these equations are still approximations and contain error.\n",
     "<br> $y_1 = f(x_1, a_0, a_1, ..., a_N) + e_1$\n",
